# AltF

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  demo.py  pyproject.toml
altf/: __init__.py  classify.py  cli.py  console.py  logs.py  machine.py  osc.py  pydantic_ai.py  spawner.py  stream.py
altf/watch/: __init__.py  __main__.py  app.py  replay.py
tests/: conftest.py  test_classify.py  test_docker.py  test_integration_local.py  test_logs.py  test_osc.py  test_state_machine.py  test_text.py  test_watch_replay.py
